--- a/src/styles/auth.scss
+++ b/src/styles/auth.scss
@@ -54,7 +54,11 @@
     > img {
       align-items: center;
     }
-
+    h2 {
+      font-size: 24px;
+      margin: 64px 0 24px;
+      font-family: "Poppins" sans-serif;
+    }
     form {
       input {
         height: 50px;
@@ -71,6 +75,16 @@
       button,
       input {
         width: 100%;
+      }
+    }
+
+    P {
+      font-size: 14px;
+      color: #737380;
+      margin-top: 16px;
+
+      a {
+        color: #e559f9;
       }
     }
   }
@@ -109,20 +123,20 @@
     display: flex;
     align-items: center;
 
-    &::before {
-      content: "";
-      flex: 1;
-      height: 1px;
-      background: #a8a8b3;
-      margin-right: 16px;
-    }
+    // &::before {
+    //   content: "";
+    //   flex: 1;
+    //   height: 1px;
+    //   background: #a8a8b3;
+    //   margin-right: 16px;
+    // }
 
-    &::after {
-      content: "";
-      flex: 1;
-      height: 1px;
-      background: #a8a8b3;
-      margin-left: 16px;
-    }
+    // &::after {
+    //   content: "";
+    //   flex: 1;
+    //   height: 1px;
+    //   background: #a8a8b3;
+    //   margin-left: 16px;
+    // }
   }
 }
